added new fields to register endpoint
