# app/Models/User.php
@@ -21,6 +21,9 @@ class User extends Authenticatable
         'name',
         'email',
         'password',
+        'username',
+        'phoneNumber',
+        'pin',
     ];
 
     /**
